workspace/DevP360/src/objects/EHR_Social_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EHR Social Histories</relationshipLabel>
        <relationshipName>EHR_Social_Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <description>The Date the Substance Use was assessed.</description>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Use__c</fullName>
        <label>Frequency of Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_MRN__c</fullName>
        <label>Source System MRN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substance__c</fullName>
        <label>Substance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EHR Social History</label>
    <nameField>
        <label>EHR Social History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EHR Social Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>